recursion.lessons.recursion.tree.Tree.scala.error
Tree:5: error: '(' expected but identifier found.
		curent(steps)
                ^